<resources>
    <string name="app_name">Carpooling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="blue">#5E98EE</color>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="publicar_un_viaje">Publicar un viaje</string>
    <string name="para_poder_publicar_un_viaje_rellena_los_siguientes_campos">Para poder publicar un viaje, rellena los siguientes campos:</string>
    <string name="lugar_de_salida">Lugar de salida:</string>
    <string name="recuerda_que_el_viaje_es_con_salida_en_el_tec_campus_puebla_para_dirigirte_a_otros_destinos">*Recuerda que el viaje es con salida en el TEC campus Puebla para dirigirte a otros destinos.</string>
    <string name="textview">TextView</string>
    <string name="hora_de_salida">Hora de salida</string>
    <string name="selecciona_una_hora">Selecciona una hora</string>
    <string name="viajes_disponibles">Viajes disponibles</string>
    <string name="llegada_villas_atlixo">Llegada: VIllas Atlixo</string>
    <string name="aceptar">Aceptar</string>
    <string name="fecha_7_12_2022">Fecha: 7/12/2022</string>
    <string name="salida_aulas_2">Salida: Aulas 2</string>
    <string name="fecha_7_12_20227">Fecha: 7/12/2022</string>
    <string name="aceptar2">Aceptar</string>
    <string name="salida_aulas_4">Salida: Aulas 4</string>
    <string name="llegada_angelopolis">Llegada: Angelopolis</string>
    <string name="hora_de_salida_13_30">Hora de salida:13:30</string>
    <string name="hora_de_salida_9_30">Hora de Salida: 9:30</string>
    <string name="el_viaje_lo_realizar_s_con">El viaje lo realizarás con:</string>
    <string name="jesus_arturo">Jesus Arturo</string>
    <string name="jkl_890">jkl-890</string>
    <string name="telefono">Telefono:</string>
    <string name="_0">0</string>
    <string name="_95124265405">95124265405</string>
    <string name="en_el_auto">En el auto:</string>
    <string name="viajes_realizados">Viajes realizados:</string>
    <string name="estas_seguro_de_realizar_el_viaje">¿Estas seguro de realizar el viaje?</string>
    <string name="placas">Placas:</string>
    <string name="al_confirmar_el_viaje_le_mandaremos_una_notificaci_n_al_conductor_para_que_se_ponga_en_contacto_contigo">Al confirmar el viaje le mandaremos una notificación al conductor para que se ponga en contacto contigo</string>
    <string name="confirmar">Confirmar</string>
    <string name="audi_a8_2019">audi a8 2019</string>

    <string-array name="salidas">
        <item>Cafe Borrego</item>
        <item>Aulas 4</item>
        <item>Centro estudiantil</item>
        <item>Rotonda PrepaTec</item>
        <item>Aulas 2</item>
    </string-array>
    <string-array name="llegadas">
        <item>Villas de atlixco</item>
        <item>Angelopolis</item>
        <item>Sonata</item>
        <item>Walmart Angelopolis</item>
        <item>La casita del profe</item>
        <item>Paseo destino</item>
        <item>Frikiplaza</item>
        <item>Avenida Juarez</item>
        <item>Palas Store</item>


    </string-array>
</resources>