<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viajes_publicados">

    <TextView
        android:id="@+id/textView42"
        android:layout_width="413dp"
        android:layout_height="47dp"
        android:background="#03A9F4"
        android:text="@string/viajes_disponibles"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="360dp"
        android:layout_height="154dp"
        android:background="#75ACD8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="132dp"
        android:layout_height="28dp"
        android:text="@string/fecha_7_12_20227"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView44"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salida_aulas_2"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llegada_angelopolis"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="146dp"
        android:layout_height="26dp"
        android:text="@string/hora_de_salida_9_30"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/Acept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="358dp"
        android:layout_height="151dp"
        android:background="#75ACD8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha 10/12/2022"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salida_aulas_4"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="@+id/textView51"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="280dp"
        android:text="Hora de salida:13:10"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="@+id/textView51"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:text="Llegada: Walmart Angelopolis"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/Acept2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="@+id/textView51"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="90dp"
        android:layout_height="18dp"
        android:text="Precio:$35"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="90dp"
        android:layout_height="18dp"
        android:text="Precio:$10"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>